basic openlayers route drawing completed

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,24 +1,22 @@
 <div class="row marketing">
 	<h4>Last Updated: {{scrapeDate.date}} at {{scrapeDate.time}}</h4>	
-	<div class="map" id="map">
+	<!--<div class="map" id="map">
 		<div id="popup" class="ol-popup">
 			<a id="popup-closer" class="ol-popup"></a>
 			<div id="popup-content"></div>
 		</div>
-	</div>
+	</div> -->
+		
+	<openlayers ol-center="keystone" height="400px" width="100%">
+		 <ol-layer ol-layer-properties="layer" ng-repeat="layer in geojson"></ol-layer>
+	</openlayers>
+	
+	<pre ng-bind="layers | json"></pre>
 </div>
 
-<!--<div class="jumbotron">
-  <h1>'Allo, 'Allo!</h1>
-  <p class="lead">
-    <img src="images/yeoman.png" alt="I'm Yeoman"><br>
-    Always a pleasure scaffolding your apps.
-  </p>
-  <p><a class="btn btn-lg btn-success" ng-href="#">Splendid!<span class="glyphicon glyphicon-ok"></span></a></p>
-</div> -->
+
 
 <div class="row marketing">
-	
 	<table class="table table-bordered">
 		<thead>
 			<tr>
@@ -35,19 +33,3 @@
 	</table>
 </div>
 
-<div class="row marketing">
-  <h4>HTML5 Boilerplate</h4>
-  <p>
-    HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.
-  </p>
-
-  <h4>Angular</h4>
-  <p>
-    AngularJS is a toolset for building the framework most suited to your application development.
-  </p>
-
-  <h4>Karma</h4>
-  <p>Spectacular Test Runner for JavaScript.</p>
-</div>
-
-<script src="scripts/drawMap.js"></script>
