Map init. Not recreating map but changing its layers and views.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -134,3 +134,10 @@ body {
 .ol-popup-closer:after {
 	content: "✖";
 }
+ 
+#map {
+    padding: 0;
+    margin: 0;
+  width: 100%;
+  height: 400px;
+}
