--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -4,67 +4,47 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/boots
 // endbower
 
 .browsehappy {
-  margin: 0.2em 0;
-  background: #ccc;
-  color: #000;
-  padding: 0.2em 0;
+	margin: 0.2em 0;
+	background: #ccc;
+	color: #000;
+	padding: 0.2em 0;
 }
 
 /* Space out content a bit */
 body {
-  padding-top: 20px;
-  padding-bottom: 20px;
+	padding-top: 20px;
+	padding-bottom: 20px;
 }
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
-.header,
-.marketing,
-.footer {
-  padding-left: 15px;
-  padding-right: 15px;
-}
-
-/* Custom page header */
-.header {
-  border-bottom: 1px solid #e5e5e5;
-
-  /* Make the masthead heading the same height as the navigation */
-  h3 {
-    margin-top: 0;
-    margin-bottom: 0;
-    line-height: 40px;
-    padding-bottom: 19px;
-  }
-}
-
-/* Custom page footer */
-.footer {
-  padding-top: 19px;
-  color: #777;
-  border-top: 1px solid #e5e5e5;
+.header{
+	padding-left: 15px;
+	padding-right: 15px;
+	background-color: rgba(0, 0, 0, 0.4);
+	color: white;
+	margin-left: auto;
+	margin-right: auto;
+	position: fixed;
+	right: 35%;
+	z-index: 1000;
+	h4 {
+		
+	}
+	
+	h5 {
+		
+	}
 }
 
 .container-narrow > hr {
-  margin: 30px 0;
+	margin: 30px 0;
 }
 
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 768px) {
-  .container {
-    max-width: 730px;
-  }
-
-  /* Remove the padding we set earlier */
-  .header,
-  .marketing,
-  .footer {
-    padding-left: 0;
-    padding-right: 0;
-  }
-  /* Space out the masthead */
-  .header {
-    margin-bottom: 30px;
-  }
+	.container {
+		max-width: 730px;
+	}
 }
 
 .ol-popup {
@@ -111,9 +91,60 @@ body {
 	content: "✖";
 }
  
-#map {
-    padding: 0;
-    margin: 0;
-  width: 100%;
-  height: 400px;
+.main-left-container {
+	position: fixed;
+	left: 0;
+	width: 65%;
+	height: 100vh;
+	top: 0;
+	
+	#map {
+		padding: 0;
+		margin: 0;
+		height: 100%;
+		width: 100%;
+		z-index: -1000;
+	}
+	
+	#footer-nav {
+		position: fixed;
+		z-index: 1000;
+	}
+	
+	#footer-nav {
+		bottom: 0;
+		width: inherit;
+		
+		ul.nav {
+			display: inline-flex;
+			width: 100%;
+		}
+		
+		ul li {
+			background-color: rgba( 0, 0, 0, 0.75);
+			width: 11em;
+			margin-left: auto;
+			margin-right: auto;
+			text-align: center;
+		}
+	}
+
 }
+
+
+#trail-status {
+	float: right;
+	width: 35%;
+	height: 100vh;
+	position: absolute;
+	overflow-y: scroll;
+	right: 0;
+	top: 0;
+	display: block;
+	
+	td {
+		font-size: smallest;
+	}
+}
+
+
